Try to prevent the canvas from being highlighted when touched on mobile

--- a/style/truchet.css
+++ b/style/truchet.css
@@ -211,4 +211,15 @@ img.possibilities {
     width: 100%;
     display: block;
     margin: 1em 0;
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Chrome/Safari/Opera */
+    -khtml-user-select: none;
+    /* Konqueror */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
 }
